# PAprojekt

./: CMakeLists.txt  README.md  main.cpp
Animals/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  Fish.cpp  Fish.h  Mammal.cpp  Mammal.h
Operations/: Feed.cpp  Feed.h  Heal.cpp  Heal.h
Places/: Aquarium.cpp  Aquarium.h  Cage.cpp  Cage.h  Enclosure.cpp  Enclosure.h  Place.cpp  Place.h
